--- a/gedcomtest/gedcomtest.fsproj
+++ b/gedcomtest/gedcomtest.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
+    <EnableDefaultContentItems>false</EnableDefaultContentItems>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
